# HTMCpp

./: .gitignore  CMakeLists.txt  LICENSE  conanfile.txt  main.cpp  project_setup.sh
components/: issues.hpp
database/: CMakeLists.txt
database/database_connection/: database_connection.cc  database_connection.hpp  db_database_connection.cc  db_database_connection.hpp
database/issues/: db_issues.cc  db_issues.hpp  issues.cc  issues.hpp
http/source/: CMakeLists.txt
http/source/app/: CMakeLists.txt
http/source/server/: CMakeLists.txt
http/source/server/include/: server.h
http/source/server/source/: server.cc
http/source/server_handler/: CMakeLists.txt
http/source/server_handler/include/: server_handler.h
http/source/server_handler/source/: server_handler.cc
http/source/server_http_session/: CMakeLists.txt
http/source/server_http_session/source/: server_http_session.cc
http/source/server_websocket_session/: CMakeLists.txt
resources/: home.html  home2.html  issues_table.scss  style.scss
views/: CMakeLists.txt
views/issues/: view_issues.cc  view_issues.hpp
views/landpage/: view_landpage.cc  view_landpage.hpp
